// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadMetaData <meta> & <title> should be equal at passed props 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  titleTemplate="%s | Israel Pro Football Leagues"
>
  <title>
    Title
  </title>
  <meta
    content="Description"
    name="description"
  />
  <meta
    property="fb:app_id"
  />
  <meta
    content="https://toto"
    property="og:url"
  />
  <meta
    content="website"
    property="og:type"
  />
  <meta
    content="Title"
    property="og:title"
  />
  <meta
    content="Description"
    property="og:description"
  />
  <meta
    content="Image"
    property="og:image"
  />
  <meta
    name="twitter:site"
  />
</HelmetWrapper>
`;

exports[`HeadMetaData Type: video => <meta> & <title> should be equal at passed props 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  titleTemplate="%s | Israel Pro Football Leagues"
>
  <title>
    Title
  </title>
  <meta
    content="Description"
    name="description"
  />
  <meta
    property="fb:app_id"
  />
  <meta
    content="https://toto"
    property="og:url"
  />
  <meta
    content="video"
    property="og:type"
  />
  <meta
    content="Title"
    property="og:title"
  />
  <meta
    content="Description"
    property="og:description"
  />
  <meta
    content="Image"
    property="og:image"
  />
  <meta
    name="twitter:site"
  />
  <meta
    content="videoURL"
    property="og:video"
  />
  <meta
    content="videoURL"
    property="og:video:secure_url"
  />
  <meta
    content="video/mp4"
    property="og:video:type"
  />
  <meta
    content={1280}
    property="og:video:width"
  />
  <meta
    content={720}
    property="og:video:height"
  />
  <meta
    content="player"
    name="twitter:card"
  />
  <meta
    content="videoURL"
    name="twitter:player"
  />
  <meta
    content={1280}
    name="twitter:player:width"
  />
  <meta
    content={720}
    name="twitter:player:height"
  />
</HelmetWrapper>
`;
